@@ -1,3 +1,6 @@
+2012-04-07  Kirit Saelensminde  <kirit@felspar.com>
+ Switched away from the use of crack to make use of a special search for the inner content in the template middleware for about 17-18% speed up.
+
 2012-01-28  Kirit Saelensminde  <kirit@felspar.com>
  Added ChangeLog
  Added a path which can be re-written by views acting as middleware.
